# Password-Manager

./: .gitignore  README.md  VaultX.iss  config.py  main.py  pyproject.toml
Database/: db.py  passwords.db  users.py  vault.db  vault_manager.py
GUI/: add_cred.py  dashboard.py  edit_cred.py  login.py  settings.py  settings_dialog.py  signup.py  theme.py  theme_manager.py  titlebar.py  toggle_switch.py  utils.py  vault.py  view_cred.py
Security/: auth.py  base64-test.py  encryption.py
assets/: copy.iss
