[project]
name = "password-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.5",
    "pyqt6>=6.10.2",
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
